Added option to disallow override in output

--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@ Program
 - [ ] P7: Handle more complex datastructures, like JSON
 - [ ] P8: Handle media formats, like displaying images taken from camera
 - [x] P9: Allow overriding the default for unknown values
+- [x] P10: Option to disallow override from XML, use attribute name instead
 
 Configurations
 ---------------
