--- a/configs/com.android.browser.xml.1
+++ b/configs/com.android.browser.xml.1
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="ASCII"?>
 <root>
-
-<database id="databases/browser2.db">	<!-- Name of the database file -->
-  <table id="bookmarks">		<!-- Name of the database table -->
+<database id="databases/browser2.db">
+  <table id="bookmarks">
     <column id="title">title</column>
     <column id="description">url</column>
     <column id="start">created</column>
 	 <icon desc="Bookmark modified">bookmark-small.png</icon>
 	 <where>created!=0</where>
+	 <insert id="caption">Bookmark created</insert>
   </table>
 
   <table id="history">
@@ -16,12 +16,14 @@
 	 <column id="start">date</column>
     <icon desc="Visiting a web page">web.png</icon>
 	 <where>date!=0</where>
+	 <insert id="caption">Web site visited</insert>
   </table>
 
   <table id="searches">
 	<column id="title">search</column>
 	<column id="start">date</column>
 	<icon desc="Searching for something">search.png</icon>
+	<insert id="caption">Performed a Google search from separate application</insert>
   </table>
 </database>
 </root>
