--- a/configs/com.android.browser.xml.1
+++ b/configs/com.android.browser.xml.1
@@ -3,20 +3,22 @@
 <database id="databases/browser2.db">
   <table id="bookmarks">
     <column id="title">title</column>
-    <column id="description">url</column>
+    <column id="description" logfile="urls.log">url</column>
     <column id="start">created</column>
 	 <icon desc="Bookmark modified">bookmark-small.png</icon>
 	 <where>created!=0</where>
 	 <insert id="caption">Bookmark created</insert>
+	 <filter columns="title;url" static="bookmarks" />
   </table>
 
   <table id="history">
     <column id="title">title</column>
-	 <column id="description">url</column>
+	 <column id="description" logfile="urls.log">url</column>
 	 <column id="start">date</column>
     <icon desc="Visiting a web page">web.png</icon>
 	 <where>date!=0</where>
 	 <insert id="caption">Web site visited</insert>
+	 <filter columns="title;url" static="web history" />
   </table>
 
   <table id="searches">
@@ -24,6 +26,7 @@
 	<column id="start">date</column>
 	<icon desc="Searching for something">search.png</icon>
 	<insert id="caption">Performed a Google search from separate application</insert>
+	 <filter columns="search" static="search" />
   </table>
 </database>
 </root>
