--- a/TODO
+++ b/TODO
@@ -13,7 +13,7 @@ Program
 - [x] P4: Support appending extra text after the result from the DB
 - [x] P5: Add option to insert random text from XML-file. Useful for filtering later
 - [x] P6: Handle filenames that are not static, maybe using regexp
-- [ ] P7: Handle more complex datastructures, like JSON
+- [x] P7: Handle more complex datastructures, like JSON
 - [ ] P8: Handle media formats, like displaying images taken from camera
 - [x] P9: Allow overriding the default for unknown values
 - [x] P10: Option to disallow override from XML, use attribute name instead
@@ -28,4 +28,4 @@ Web application
 ----------------
 
 - [x] W1: Support real date functionality in browsers that doesn't support HTML5 date
-- [ ] W2: More advanced filtering, AND, OR on multiple boxes
+- [x] W2: More advanced filtering, OR on multiple boxes
