Fixed several issues and added new configurations

--- a/configs/com.android.browser.xml.1
+++ b/configs/com.android.browser.xml.1
@@ -39,7 +39,7 @@
 <column id="description">name</column>
 <column id="description">value</column>
 <icon desc="Cookie in the browser">cookie.png</icon>
-<insert id="caption">Cookie placed in browser</insert>
+<insert id="caption">Cookie placed in browser (first time)</insert>
 <filter columns="host_key" static="cookie" />
 </table>
 
